--- a/.travis.yml
+++ b/.travis.yml
@@ -2,13 +2,17 @@
 # * https://www.objc.io/issues/6-build-tools/travis-ci/
 # * https://github.com/supermarin/xcpretty#usage
 
-osx_image: xcode7.3
+osx_image: xcode12.4
 language: objective-c
-# cache: cocoapods
-# podfile: Example/Podfile
-# before_install:
-# - gem install cocoapods # Since Travis is not always on latest version
-# - pod install --project-directory=Example
+
+cache: cocoapods
+podfile: Example/Podfile
+before_install:
+  - gem install cocoapods
+  - gem install slather
+  - pod install --project-directory=Example
 script:
-- set -o pipefail && xcodebuild test -enableCodeCoverage YES -workspace Example/GeoLogger.xcworkspace -scheme GeoLogger-Example -sdk iphonesimulator9.3 ONLY_ACTIVE_ARCH=NO | xcpretty
-- pod lib lint
+  - set -o pipefail && xcodebuild build test -enableCodeCoverage YES -workspace Example/GeoLogger.xcworkspace -scheme GeoLogger-Example -sdk iphonesimulator -destination 'platform=iOS Simulator,name=iPhone 8,OS=14.4' ONLY_ACTIVE_ARCH=NO | xcpretty
+after_success:
+  - slather
+  - bash <(curl -s https://codecov.io/bash) -f reports/cobertura.xml -X coveragepy -X gcov -X xcode
