--- a/Example/GeoLogger/Info.plist
+++ b/Example/GeoLogger/Info.plist
@@ -22,6 +22,26 @@
 	<string>1</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
+	<key>NSAppTransportSecurity</key>
+	<dict>
+		<key>NSAllowsArbitraryLoads</key>
+		<true/>
+	</dict>
+	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
+	<string>The app needs both when in use and background location permission</string>
+	<key>NSLocationTemporaryUsageDescriptionDictionary</key>
+	<dict>
+		<key>TemporaryAccuracyAuthPurposeKey</key>
+		<string>This app needs accurate location so it can verify that you're in a supported region.</string>
+	</dict>
+	<key>NSLocationUsageDescription</key>
+	<string>The app needs always location permission</string>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>The app needs when in use location permission</string>
+	<key>UIBackgroundModes</key>
+	<array>
+		<string>location</string>
+	</array>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
